--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "scripts": {
     "build": "tsc && cp src/public dist/public -r",
-    "start":"node dist/index.js",
+    "start": "node dist/index.js",
     "prod": "SET NODE_ENV=production& ts-node src/index.ts",
-    "dev-start":"SET NODE_ENV=development& ts-node src/index.ts",
+    "dev-start": "SET NODE_ENV=development& ts-node src/index.ts",
     "dev": "npx nodemon src/index.ts"
   },
   "keywords": [],
@@ -29,7 +29,9 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "mongodb": "^4.4.1",
-    "mongoose": "^6.2.4"
+    "mongoose": "^6.2.4",
+    "nodemailer": "^6.7.2",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -37,6 +39,7 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^17.0.21",
+    "@types/nodemailer": "^6.4.4",
     "@types/validator": "^13.7.1",
     "nodemon": "^2.0.15",
     "ts-node": "^10.5.0",
