--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Cogic Goran",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.6.2",
     "@types/cookie-parser": "^1.4.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
